--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 # JDBC Properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=stringstudent
-spring.datasource.password=stringstudent
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
