--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+#
+# Spring Data REST Properties
+#
+spring.data.rest.base-path=/magic-api
